@@ -1,8 +1,12 @@
 0.8.0 [Unreleased]
 -----
+# Added
+- Implement lexer__print function
+
 # Changed
 - Print dashes "-" instead of blanks when printing SLR tables, this is helpful
   for awk to print the right columns
+
 
 0.7.0
 -----
